--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -83,6 +83,9 @@
     <system:String x:Key="SettingsUIAboutHMM"       >About Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUILanguage"       >Language:</system:String>
     <system:String x:Key="SettingsUITheme"          >Theme:</system:String>
+    <system:String x:Key="SettingsUIReleaseChannel" >Update Channel:</system:String>
+    <system:String x:Key="SettingsUIChangeChannelRel" xml:space="preserve">You are about to change to the Release channel.&#x0a;&#x0a;Are you sure you want to continue? Hedge Mod Manager will need to restart to change channels.</system:String>
+    <system:String x:Key="SettingsUIChangeChannelDev" xml:space="preserve">You are about to change to the Development channel. This channel may contain untested features and bugs.&#x0a;&#x0a;Are you sure you want to continue? Hedge Mod Manager will need to restart to change channels.</system:String>
 
     <!-- MainWindow UI Strings -->
     <system:String x:Key="MainUIInstallFormHeader"   >Install a mod by...</system:String>
@@ -189,10 +192,23 @@
     <system:String x:Key="ModUpdatesTitle"        >Mod Updates</system:String>
     <system:String x:Key="ModDownloadsTitle"      >Mod Downloads</system:String>
 
+    <!-- Exception Window Strings -->
+    <system:String x:Key="ExceptionWindowTitle"           >Hedge Mod Manager Crash</system:String>
+    <system:String x:Key="ExceptionWindowCrash"           >Hedge Mod Manager Has Thrown an Exception!</system:String>
+    <system:String x:Key="ExceptionWindowUnhandled"       >Hedge Mod Manager Has Ran Into an Error!</system:String>
+    <system:String x:Key="ExceptionWindowButtonCopyLog"   >Copy Log to Clipboard</system:String>
+    <system:String x:Key="ExceptionWindowButtonIgnore"    >Ignore and Close</system:String>
+    <system:String x:Key="ExceptionWindowButtonReport"    >Submit Report on GitHub</system:String>
+    <system:String x:Key="ExceptionWindowNewUpdateTitle"  >New Update Available!</system:String>
+    <system:String x:Key="ExceptionWindowNewUpdateText" xml:space="preserve" >It appears this version of Hedge Mod Manager is out of date.&#x0a;It is highly recommended to first update and see if the issue still occurs.&#x0a;Would you like to update now?</system:String>
+    <system:String x:Key="ExceptionWindowUpdateErrorTitle">Update Error!</system:String>
+    <system:String x:Key="ExceptionWindowUpdateErrorText" xml:space="preserve" >Hedge Mod Manager could not update!&#x0a;Please manually download the lastest release.</system:String>
+
     <!-- Themes -->
-    <system:String x:Key="ThemeDark">Dark</system:String>
-    <system:String x:Key="ThemeOLED">OLED</system:String>
-    <system:String x:Key="ThemeLight">Light</system:String>
+    <system:String x:Key="ThemeDark"  >Dark</system:String>
+    <system:String x:Key="ThemeDarker">Darker</system:String>
+    <system:String x:Key="ThemeOLED"  >OLED</system:String>
+    <system:String x:Key="ThemeLight" >Light</system:String>
 
     <!-- Games -->
     <system:String x:Key="GameSonicGenerations">Sonic Generations</system:String>
